--- a/text/appendix-1.tex
+++ b/text/appendix-1.tex
@@ -47,7 +47,7 @@ A beam\footnote{In this section it is electron beams and not bunches that a refe
 \begin{equation}
 	\rho(\mathbf{x}, \mathbf{p}) = \rho(x,p_x,y,p_y,z,p_z),
 \end{equation}
-where $\mathbf{p} = p_x \hat{\mathbf{x}} +  p_y \hat{\mathbf{y}} +  p_z \hat{\mathbf{z}}$ is the canonical momentum \cite{mcDonald Methods of emittance measurement 122-132 Springer1989}. Under the Hamilton formalism, for ideal conditions, the six-dimensional volume of the beam in this space, termed the \textit{emittance}, arises as a conserved quantity and is therefore a useful quantity to describe the beam quality. 
+where $\mathbf{p} = p_x \hat{\mathbf{x}} +  p_y \hat{\mathbf{y}} +  p_z \hat{\mathbf{z}}$ is the canonical momentum \cite{mcdonaldMethodsEmittanceMeasurement1989}. Under the Hamilton formalism, for ideal conditions, the six-dimensional volume of the beam in this space, termed the \textit{emittance}, arises as a conserved quantity and is therefore a useful quantity to describe the beam quality. 
 (something to do with it affecting the ability to focus the beam?? check the papers)
 It is useful to rotate the coordinate system so as to align with the beam's propagation. The distribution can be written as
 \begin{equation}
