--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -4,7 +4,7 @@
 \section{Motivations and an overview}
 % TODO: \textbf{**This is from paper cover letter and acts as an abstract for this chapter, I also need to go through and add citations**}
 
-Throughout the history of experimental science, light has been the primary tool for investigation. Through the creation of synchrotron radiation sources and more recently XFELs, electron bunches have been used to create increasingly specialised light sources for the study of matter of all kinds. At Diamond Light Source in the UK, electron beams have been used for a diverse range of studies from new drugs to ancient paintings, while at SLAC, the United States' forefront electron accelerator, common applications hail from many disciplines: science, medicine, industry and homeland security.  Hence, much research has been done to produce electron bunches with ever greater charge, energy and coherency. Multi-petawatt laser facilities are now available across the globe for the study of laser-plasma interactions at ever greater peak intensities. In the ultra-relativistic regime $a_0 \gg 1$, there is a novel method for high-charge electron bunch creation. Via relativistic effects, a laser pulse organises the electrons at the surface of a solid density plasma into coherent bunches, which are then ejected at high speeds. Those discussed in this thesis have properties rivalling those of forefront accelerators. The quality, charge and duration of the attosecond electron bunches described here would enable the study of the most fundamental interactions of our universe. While there has been some experimental evidence for attosecond electron bunches from intense laser-solid interactions, here is proposed a new mass-limited target setup to generate electron bunches with greater charge density. Such electron bunches are fully characterised using \ac{PIC} simulations to compare their quality to those of existing electron bunch production methods and their energies described via the Zero Vector Potential Mechanism. Their implications for laser to plasma energy absorption are also considered including at the onset of \ac{SF-QED} effects. 
+Throughout the history of experimental science, light has been the primary tool for investigation. Through the creation of synchrotron radiation sources and more recently XFELs, electron bunches have been used to create increasingly specialised light sources for the study of matter of all kinds. At Diamond Light Source in the UK, electron beams have been used for a diverse range of studies from new drugs to ancient paintings, while at SLAC, the United States' forefront electron accelerator, common applications hail from many disciplines: science, medicine, industry and homeland security.  Hence, much research has been done to produce electron bunches with ever greater charge, energy and coherency. Multi-petawatt laser facilities are now available across the globe for the study of laser-plasma interactions at ever greater peak intensities. In the ultra-relativistic regime $a_0 \gg 1$, there is a novel method for high-charge electron bunch creation. Via relativistic effects, a laser pulse organises the electrons at the surface of a solid density plasma into coherent bunches, which are then ejected at high speeds. Those discussed in this thesis have properties rivalling those of forefront accelerators. The quality, charge and duration of the attosecond electron bunches described here would enable the study of the most fundamental interactions of our universe. Electron bunch formation from solid targets has received much interest in recent years \cite{kulaginCharacteristicsRelativisticElectron2009, huEnhancedDenseAttosecond2015, cantonoExtensiveStudyElectron2018, serebryakovNearsurfaceElectronAcceleration2017, zhangGiantIsolatedAttosecond2020, hornyGenerationSingleAttosecond2021, ongElectronTransportNanowire2021, kulaginSubrelativisticInfraredTerahertz2021} with some experimental evidence for attosecond electron bunches from intense laser-solid interactions \cite{linIsolatedAttosecondElectron2020, cardenasSubcycleDynamicsRelativistic2019, thevenetVacuumLaserAcceleration2016}. This interest is in part due to their production of higher charge bunches at lower intensities compared to gas targets \cite{linIsolatedAttosecondElectron2020}. Here is proposed a new mass-limited target setup to generate electron bunches with greater charge density. Such electron bunches are fully characterised using \ac{PIC} simulations to compare their quality to those of existing electron bunch production methods and their energies described via the Zero Vector Potential Mechanism, alongside the theories of the Relativistic Electron Spring \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Coherent Synchrotron Emission \cite{derbruggeEnhancedRelativisticHarmonics2010}, this is a post-ponderomotive model of attosecond absorption and reflection. This model considers a quasi-static surface equilibrium state analogously to ion acceleration in the hole boring \cite{vincentiOpticalPropertiesRelativistic2014} and light sail regimes \cite{macchiTheoryLightSail2014}. \ac{ZVP} theory has direct relevance to \ac{HHG} due to the known intrinsic link between electron bunches and the reflection mechanism \cite{cousensElectronTrajectoriesAssociated2020, savinAttosecondscaleAbsorptionExtreme2017}. The implications of \ac{ZVP} for laser to plasma energy absorption are also considered including at the onset of \ac{SF-QED} effects. 
 
 These results have excited the community to perform experiments to realise these electron bunches for the creation of ultra-bright X-ray pulses: having recently completed an experimental campaign at the ORION laser facility, studying high harmonic generation from such electron bunches, the author's proposal has been accepted to observe the electron bunches directly at the GEMINI PW laser at the Central Laser Facility, UK.
 
@@ -36,7 +36,7 @@ Here, the second term of equation \ref{eq:hamiltonian_general} describes the con
 	\mathbf{P_\mu  P^\mu} = \frac{U^2}{c^2} - |\mathbf{p}|^2 = m^2_\mathrm{e}c^2.
 \end{equation}
 
-Decomposing the electron's 3-momentum into orthogonal components: $p_\mathrm{prop}$, along the laser propagation direction, $p_\mathrm{pol}$, along the polarisation axis of the laser pulse and $p_\perp$, perpendicular to both, there are two simplifications to be made. Firstly, by canonical conservation of transverse momentum, $p_\mathrm{pol} = eA$, where $A$ is the laser vector potential amplitude. Secondly, in the case of a p-polarised laser pulse (the known optimum for ZVP electron bunch generation \cite{savinAttosecondscaleAbsorptionExtreme2017} and \ac{HHG} \cite{baevaTheoryHighorderHarmonic2006}), with reference to figure \ref{fig:zvpforcesppol} and the Lorentz force law, the forces at play confine the electron trajectory to the  $p_\mathrm{prop}$-$p_\mathrm{pol}$ plane and the essential interaction geometry is two-dimensional. This is provided one considers length scales smaller than the focal spot of the laser pulse on the target, such that variation of the ponderomotive pressure with the third dimension can be neglected.
+Decomposing the electron's 3-momentum into orthogonal components: $p_\mathrm{prop}$, along the laser propagation direction, $p_\mathrm{pol}$, along the polarisation axis of the laser pulse and $p_\perp$, perpendicular to both, there are two simplifications to be made. Firstly, by canonical conservation of transverse momentum, $p_\mathrm{pol} = eA$, where $A$ is the laser vector potential amplitude. Secondly, in the case of a p-polarised laser pulse (the known optimum for ZVP electron bunch generation \cite{savinAttosecondscaleAbsorptionExtreme2017} and \ac{HHG} \cite{baevaTheoryHighorderHarmonic2006}), with reference to figure \ref{fig:zvpforcesppol} and the Lorentz force law, the forces at play confine the electron trajectory to the $p_\mathrm{prop}$-$p_\mathrm{pol}$ plane and the essential interaction geometry is two-dimensional. This is provided one considers length scales smaller than the focal spot of the laser pulse on the target, such that variation of the ponderomotive pressure with the third dimension can be neglected.
 
 Explicitly, the Hamiltonian can be written as
 \begin{equation}\label{eq:hamiltonian_specific}
@@ -427,7 +427,7 @@ where $\Delta y$ is the distance along $y$ from the plasma edge to the detection
 \begin{equation}\label{eq:zvp-gamma}
 	\gamma = 1 + (0.30)\times \frac{a^2_0}{\bar{n}_\mathrm{e}} + (1.2f)\times a'_0.
 \end{equation}
-Here the primed vector potential refers to the intensity of the subsequent peak of the laser pulse. This final term could be neglected or at least reduced somewhat once super-Gaussian spatial laser pulses become standard in this intensity regime or by using a suitable plasma separator \cite{miyauchiLaserElectronAcceleration2004} \textbf{OTHER CITE}. Both acceleration phases fail to meet the criteria of the Lawson-Woodward theorem. The ZVP phase is dependent on the existence of electrostatic forces, while the secondary phase occurs for a finite interaction region.
+Here the primed vector potential refers to the intensity of the subsequent peak of the laser pulse. This final term could be neglected or at least reduced somewhat once super-Gaussian spatial laser pulses become standard in this intensity regime or by using a suitable plasma separator \cite{miyauchiLaserElectronAcceleration2004}, as applied in \cite{andreevDoubleRelativisticElectron2013}. Both acceleration phases fail to meet the criteria of the Lawson-Woodward theorem. The ZVP phase is dependent on the existence of electrostatic forces, while the secondary phase occurs for a finite interaction region.
 
 Fitting equation \ref{eq:zvp-gamma} to the PIC simulation data presented in figure \ref{fig:zvpmeangammas} finds
 \begin{equation}
