--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -202,7 +202,7 @@
 \flushbottom
 \include{text/ch1-intro}
 \include{text/ch2-zvp}
-\include{text/chx-misc}
+%\include{text/chx-misc}
 
 
 %% APPENDICES %% 
