--- a/references.bib
+++ b/references.bib
@@ -1187,7 +1187,6 @@
 @techreport{gawneL0501AbsorptionEfficiency,
   title = {A\&{{L0501}}: {{Absorption Efficiency}} of the {{Zero Vector Potential Mechanism}}},
   author = {Gawne, T},
-  abstract = {The absorption efficiency of the zero vector potential (ZVP) mechanism, a novel absorption mechanism first proposed by Baeva et al. [Physics of Plasmas 18, 056702 (2011)] and extended to 3D by Savin et al. [Physics of Plasmas 24, 113103 (2017)], is studied using two dimensional particle-in-cell simulations. The ZVP mechanism is predicted to be an efficient generator of high-order harmonics of the laser frequency for laser-plasma interactions with sufficiently high density-to-intensity ratios. Of the absorbed energy, it is predominantly transferred to electrons. The proportion of the laser energy carried by the electrons decreases as the intensity \'i \textmu\'i\textdegree{$\frac{1}{4}$}\'i \textmu\'i{$\frac{1}{4}$} increases. Ions absorb the lowest, but a non-negligible, proportion of the laser energy that increases with \'i \textmu\'i\textdegree{$\frac{1}{4}$}\'i \textmu\'i{$\frac{1}{4}$} .},
   file = {/Users/timmis/Zotero/storage/PC6FVVKP/2019_gawne_ZVP.pdf}
 }
 
@@ -1936,7 +1935,6 @@
 @techreport{leblancSupplementalMaterialSpatial,
   title = {Supplemental {{Material}} for '{{Spatial}} Properties of High-Order Harmonic Beams from Plasma Mirrors: A Ptychographic Study'},
   author = {Leblanc, A and Monchoc{\'e}, S and Vincenti, H and Kahaly, S and Vay, J-L and Qu{\'e}r{\'e}, F},
-  abstract = {In this document, we provide: \textbullet{} A description of the experimental setup. \textbullet{} A derivation of the analytical formulas for the curvature of harmonic wavefronts, in the CWE and ROM harmonic generation regimes. \textbullet{} A detailed discussion on the comparison of the modeled and measured harmonic phase curvatures, and of the procedure used for this comparison. \textbullet{} Information on the Particle-In-Cell simulations performed to obtain the numerical results of Fig. 2 of the main text on the harmonic source size as a function of harmonic order. PHYCHOGRAPHIC MEASUREMENT OF HIGH-ORDER HARMONIC BEAMS GENERATED ON PLASMA MIRRORS Experimental setup The measurements were performed at CEA Saclay using the UHI100 laser (100 TW, 25fs FWHM). As a very accurate control on the plasma expansion at the target surface is required, the temporal contrast is enhanced before the interaction using a double plasma mirror system, to reach values higher than 10 12 at times {$\tau$} {$>$} 10 ps before the main pulse. Two 1/2 inch diameter mirrors are inserted on the edges of the laser beam (3 inches diameter), in front of one of the large mirrors used to steer the main beam, in order to select two small parts of this beam and generate two prepulses focused on target at controllable delays {$\tau$} 1 and {$\tau$} 2 before the main pulse (typically a few picoseconds). These three pulses are focused on target using an off-axis parabolic mirror of focal length f = 500mm. As illustrated on Fig.S1 a, when {$\delta\tau$} = {$\tau$} 1 - {$\tau$} 2 = 0f s, the two prepulse beams interfere on the target surface. A slight variation in {$\delta\tau$} by a fraction of the laser period T L leads to a shift of the position of the fringes in this interference pattern. A larger variation, of a fraction of the pulse duration {$\tau$} L , changes the contrast of the interference fringes. The fringe spacing depends on the angle between the two focused prepulse beams: it is equal to d = 22\textmu m here. The maximum intensity on target of the prepulse beams focal spot is about 2.10 16 W/cm 2. The generated structured plasma, so-called transient plasma grating, then expends into the vacuum for a delay {$\tau$} d = 0.5({$\tau$} 1 + {$\tau$} 2), with a typical velocity of L/{$\tau$} d {$\sim$} 50 - 60nm/ps and depth of {$\delta$}L/L 20\%. This velocity is measured with the diagnostic described in [1], and the depth as described in [2]. As illustrated on Fig.S1 b, after a delay {$\tau$} d , the main beam impinges the transient plasma grating and drives high order harmonic generation. The control of the generation process is performed using a diaphragm of adjustable diameter: for the ROM mechanism, the whole beam is focused on target, leading to a focal spot (see Fig.S1 b) of waist w L = 6.2\textmu m and a maximum laser amplitude of a 0 1.5 - 2 at maximum laser power. For the CWE process, a 1-inch diameter diaphragm is introduced in the main beam before focusing, leading to a focal spot of waist w L = 14.5\textmu m and maximum laser amplitude of a 0 0.18 - 0.25.},
   file = {/Users/timmis/Zotero/storage/3DU4CPEM/Supp_Mat_Resub.pdf}
 }
 
@@ -3103,7 +3101,7 @@
 }
 
 @article{takahashiGeneration10uJCoherent2002,
-  title = {Generation of 10-{{\textmu J}} Coherent Extreme-Ultraviolet Light by Use of High-Order Harmonics},
+  title = {Generation of 10-{{ $\mu$J}} Coherent Extreme-Ultraviolet Light by Use of High-Order Harmonics},
   author = {Takahashi, Eiji and Nabekawa, Yasuo and Midorikawa, Katsumi},
   year = {2002},
   month = nov,
@@ -3626,7 +3624,6 @@
   issn = {2334-2536},
   doi = {10.1364/OPTICA.420520},
   urldate = {2023-08-31},
-  abstract = {High-intensity lasers are critical for the exploration of strong field quantum electrodynamics. We report here a demonstration of laser intensity exceeding                                                                                               1                                                                                                                                                           0                                                                                                23                                                                                                                                                 W                                                                                /                                                                                                           c                         m                                                                 2                                                                  with the CoReLS petawatt (PW) laser. After wavefront correction and tight focusing with a two-stage adaptive optical system and an f/1.1 (                                                   f                   =                                                               300                                                                                                                          m                       m                                                                                       ) off-axis parabolic mirror, we obtained near diffraction-limited focusing with a spot size of 1.1~\textmu m (FWHM). From the measurement of 80 consecutive laser shots at 0.1~Hz, we achieved a peak intensity of                                                   (                                        1.1                                                                                                                              {$\pm$}                                                                                                                                                   0.2                                      )                                        \texttimes{}                                                                                                       1                                                                                                                                                           0                                                                                                23                                                                                                                                                 W                                                                                /                                                                                                           c                         m                                                                 2                                                                  , verifying the applicability of the ultrahigh intensity PW laser for ultrahigh intensity laser\textendash matter interactions. From the statistical analysis of the PW laser shots, we identified that the intensity fluctuation originated from air turbulence in the laser beam path and beam pointing. Our achievement could accelerate the study of strong field quantum electrodynamics by enabling exploration of nonlinear Compton scattering and Breit\textendash Wheeler pair production.},
   langid = {english},
   file = {/Users/timmis/Zotero/storage/J7GSBT5W/Yoon et al. - 2021 - Realization of laser intensity over 10 23su.pdf}
 }
@@ -3718,7 +3715,6 @@
   issn = {2095-4719, 2052-3289},
   doi = {10.1017/hpl.2018.23},
   urldate = {2023-08-31},
-  abstract = {We present a recent progress of the SG-II 5PW facility, which designed a multi-petawatt ultrashort pulse laser based on optical parametric chirped-pulse amplification (OPCPA). The prior two optical parametric amplifiers have been accomplished and chirped pulses with an energy of 49.7 J and a full-width-at-half-maximum (FWHM) spectrum bandwidth of 85 nm have been achieved. In the PW-scale optical parametric amplification (OPA), with the pump pulse that has an energy of 118 J from the second harmonic generation of the SG-II 7th beam, the pump-to-signal conversion efficiency is up to 41.9\%, which to the best of our knowledge is the highest among all of the reported values for OPCPA systems. The compressed pulse is higher than 37 J in 21 fs (1.76 PW), and the focal spot is {$\sim$}10 \textmu m after the closed-loop corrections by the adaptive optics. Limited by the repetition of the pump laser, the SG-II 5PW facility operates one shot per hour. It has successfully been employed for high energy physics experiments.},
   langid = {english},
   file = {/Users/timmis/Zotero/storage/IA8EVMVM/Zhu et al. - 2018 - Analysis and construction status of SG-II 5PW lase.pdf}
 }
