--- a/text/chx-misc.tex
+++ b/text/chx-misc.tex
@@ -221,7 +221,7 @@ Once I have finished this section I must redo boosted section since I have made 
 
 I must also at some point just state that a hat indicates a normalised vector.
 
-\textbf{Note that this section needs redoing, there is a new jupyter lab notebook for calculating values in ORION_analysis_sims/experiment_data_analysis on archer2 and called polarisations.ipynb}
+%TODO Note that this section needs redoing, there is a new jupyter lab notebook for calculating values in ORION_analysis_sims/experiment_data_analysis on archer2 and called polarisations.ipynb
 
 
 \subsection{Condition on validity of hole boring expression}
